# chroot-distro

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  bootstrap-rootfs.sh  build.sh  customize.sh  module.prop  pyproject.toml  status.sh  update.json
.github/: dependabot.yml
.github/actions/plan-build/: action.yml
.github/actions/publish-distro/: action.yml
.github/workflows/: build-distro.yml  checkup-and-release.yml  ci.yml  publish.yml  update-distro-versions.yml  update-distro.yml
.github/workflows/scripts/: check_distro_versions.py
data/: distros.json
distro-build/: alpine.sh  archlinux.sh  debian.sh  kali.sh  manjaro.sh  trisquel.sh  void.sh
module/: customize.sh  module.prop  service.sh  status.sh  uninstall.sh  update.json
serviced/: serviced.py
src/chroot_distro/: cli.py  constants.py  locking.py  message.py  names.py  parser.py  progress.py
src/chroot_distro/commands/: backup.py  install.py  list_cmd.py  remove.py  restore.py  unmount.py
src/chroot_distro/commands/help/: pages.py
src/chroot_distro/commands/login/: __init__.py  bindings.py  chroot_cmd.py  env.py  passwd.py
src/chroot_distro/completions/: _chroot-distro  chroot-distro.bash  chroot-distro.fish
src/chroot_distro/helpers/: android.py  display.py  layer_diff.py  mount_manager.py  namespace.py  rootfs.py  sound.py  wayland.py  x11.py
src/chroot_distro/helpers/build_engine/: run_step.py
src/chroot_distro/helpers/docker/: layers.py  pull.py  transport.py
tests/unit/: test_arch.py  test_backup_restore.py  test_cli.py  test_constants.py  test_display.py  test_display_forwarding.py  test_docker_refs.py  test_dockerfile.py  test_elevate.py  test_install.py  test_layer_diff.py  test_list.py  test_locking.py  test_login_helpers.py  test_message.py  test_mount_manager_ns.py  test_names.py  test_namespace.py  test_parser.py  test_paths.py  test_progress.py  test_remove.py  test_rootfs.py  test_sound.py  test_tar_extract.py  test_unmount.py  test_wayland.py  test_x11.py
tools/: serviced.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: color.css  main.js  style.css
