[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chroot-distro"
version = "1.5.6"
description = "chroot-distro is a lightweight Linux container management utility built around chroot."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "sabamdarif" }]
keywords = [
	"chroot",
	"container",
	"linux",
	"android",
	"termux",
	"rootfs",
	"distro",
	"docker",
	"oci",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: System :: Systems Administration",
	"Typing :: Typed",
]
dependencies = [] # Zero third-party deps

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-cov>=5.0",
	"ruff>=0.6",
	"mypy>=1.10",
	"pre-commit>=3.0",
]

[project.scripts]
chroot-distro = "chroot_distro.cli:main"

[project.urls]
Homepage = "https://github.com/sabamdarif/chroot-distro"
Repository = "https://github.com/sabamdarif/chroot-distro"
"Bug Tracker" = "https://github.com/sabamdarif/chroot-distro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chroot_distro"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
	"E",
	"F",
	"W",
	"I",
	"N",
	"UP",
	"ASYNC",
	"B",
	"A",
	"C4",
	"DTZ",
	"PIE",
	"PT",
	"RET",
	"SIM",
	"PLC",
	"PLE",
	"PLW",
	"RUF",
]
ignore = ["E501", "PT012", "PLC0415"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[dependency-groups]
dev = ["build>=1.5.0", "twine>=6.2.0"]
